...
                                    </mask>
                                </variation>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e2d-br-B0F">
                                <rect key="frame" x="12" y="162" width="115" height="180"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="englishTextView"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="115" id="CiM-jF-drx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                <variation key="default">
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="55T-xv-tU3">
                                <rect key="frame" x="43" y="318" width="234" height="83"/>
                                <accessibility key="accessibilityConfiguration" label="translateButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="83" id="PqR-Op-hvv"/>
                                </constraints>
                                <state key="normal" title="TRANSLATE TO YODA"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    </mask>
                                </variation>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yJA-4B-dxK">
                                <rect key="frame" x="189" y="162" width="115" height="180"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="yodaTextView"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
...
